	playout of single channel streams to be incorrect.
2016-01-15 Fred Gleason <fredg@paravelsystems.com>
	* Implemented sample-rate conversion in the ALSA audio device.
2016-01-15 Fred Gleason <fredg@paravelsystems.com>
	* Implemented PLL samplerate adaptation in the ALSA audio device.
2016-01-15 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'make rpm' target.
2016-01-20 Fred Gleason <fredg@paravelsystems.com>
	* Implemented an AAC decoder in 'src/glassplayer/codec_fdk.cpp'
	and 'src/glassplayer/codec_fdk.h'.
2016-01-20 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.
2016-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Changed the SRC type from SRC_SINC_FASTEST to SRC_LINEAR in
	'src/glassplay/dev_alsa.cpp'.
2016-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Removed superfluous 'LOCAL_PATH' statments from 'configure.ac'.
2016-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Implemented automatic reconnection for glassplayer(1).
2016-01-21 Fred Gleason <fredg@paravelsystems.com>
	* Extended automatic reconnection to detect data starvation and
	missing mountpoint conditions.
2016-01-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/glassplayer.cpp' that threw a
	segfault when the program was invoked with no arguments.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.1.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Removed support for '--server-type=' option in
	'src/glassplayer/glassplayer.cpp'.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Added support for handling M3U stream URLs.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused GET requests to return 400 in
	'src/glassplayer/serverid.cpp'.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.2.
2016-01-29 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'README'.